--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %        Author: Pedro Ferrari
 %       Created: 08 Feb 2017
 % Last Modified: 08 Feb 2017
-%   Description: Main File for Thesis
+%   Description: Main Template File for Thesis
 %===============================================================================
 \documentclass[a4paper,11pt,leqno]{book}
 
