fix cv procedure results error

--- a/ch3_machine_learning.tex
+++ b/ch3_machine_learning.tex
@@ -726,7 +726,7 @@ Cross validation intends to estimate the expected \textit{out-of-sample} error $
 
  \begin{algorithm}%[h]
  \SetAlgoLined
- \KwResult{Write here the result }
+ \KwResult{Data table mapping error scores $CV(\alpha) \ \forall \alpha$}
  Initialize $\mathcal{A}$ and $\gamma(\cdot)$\;
  \For{ $\alpha \in \mathcal{A}$}{
  \eIf{data transformation}{
